# rag-experimentations

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  init-db.sql  main.py  pyproject.toml
docs/: description_thoughts.md  document_aware.md  research_coversation.md
src/chunking/: document_aware.py  factory.py  hierarchical.py  relational.py  semantic.py
src/cli/: commands.py
src/config/: constants.py  settings.py
src/database/: connection.py  tables.py
src/embedding/: base.py  bge_m3.py  e5_small.py  factory.py  gte_multilingual.py  harrier.py  qwen.py
src/evaluation/: dataset_generator.py  ragas_evaluator.py  reporter.py  result_store.py
src/indexing/: indexer.py  timer.py
src/ingestion/: confluence_client.py  html_to_markdown.py  image_downloader.py  metadata_manager.py  pipeline.py
src/models/: enums.py  schemas.py
src/observability/: langfuse_setup.py
src/retrieval/: ensemble.py  hybrid_search.py  reranker.py  reranker_factory.py  workflow.py
src/visualization/: dashboard.py  metrics_collector.py
